2009-12-10 [iwkse]	3.7.3cvs37

	* src/compose.c
            Add missing checks for gtkaspell: avoid
            crashing in some cases when Enchant is 
            enabled but the spell checker is disabled 
            in preferences.

2009-12-09 [colin]	3.7.3cvs36

	* src/compose.c
		Fix leak and unchecked accesses.

2009-12-09 [mir]	3.7.3cvs35

	* src/compose.c
	Fix Bug 2072 "template at folder properties is not working"
	introduced in cvs24.

2009-12-08 [pawel]	3.7.3cvs34

	* src/compose.c
		When 'Reply All' remove current compose address from
		Cc/Bcc list - fix for regression introduced in cvs28

2009-12-05 [pawel]	3.7.3cvs33

	* src/messageview.c
		Fix memory management, duh!

2009-12-04 [pawel]	3.7.3cvs32

	* src/messageview.c
		Use case insensitive comparison in search for
		duplicate urls
	* src/uri_opener.c
		Refresh scrollbars on every window open

2009-12-04 [pawel]	3.7.3cvs31

	* src/compose.c
		Highlight misspelled words when applying template and
		check_while_typing option is on

2009-12-03 [pawel]	3.7.3cvs30

	* src/compose.c
		Highlight misspelled words in text inserted from file(s)
		or pasted to message body when check_while_typing
		options is on

2009-12-02 [pawel]	3.7.3cvs29

	* src/compose.c
		Revert first part of previous commit

2009-12-02 [pawel]	3.7.3cvs28

	* src/compose.c
		Fix Bug 2055 "duplicate mailing list reply if
		List-Post + Reply-To present"
		- Ignore Reply-To if answering to ML
		- Improve parsing of List-Post header

2009-12-02 [pawel]	3.7.3cvs27

	* src/compose.c
	* src/compose.h
		Fix Bug 1850 "Reply All" duplicates "To" user in "CC" if original
		email had user in "From" and "CC"
		Don't allow duplicate addresses in compose window headers

2009-12-02 [mones]	3.7.3cvs26

	* manual/intro.xml
	* manual/es/intro.xml
	* manual/fr/intro.xml
	* manual/it/intro.xml
	* manual/pl/intro.xml
		Make URL to point current site

2009-12-01 [holger]	3.7.3cvs25

	* src/summaryview.c
	* src/summaryview.h