@@ -6913,7 +6913,7 @@ static void compose_dict_changed(void *data)
 	Compose *compose = (Compose *) data;
 
 	if(compose->gtkaspell && 
-       compose->gtkaspell->recheck_when_changing_dict == FALSE)
+       	   compose->gtkaspell->recheck_when_changing_dict == FALSE)
 		return;
 
 	gtkaspell_highlight_all(compose->gtkaspell);
@@ -7526,9 +7526,9 @@ static Compose *compose_create(PrefsAccount *account,
 			}
         	}
 	}
+    compose->gtkaspell = gtkaspell;
 	compose_spell_menu_changed(compose);
 	claws_spell_entry_set_gtkaspell(CLAWS_SPELL_ENTRY(subject_entry), gtkaspell);
-    compose->gtkaspell = gtkaspell;
 #endif
 
 	compose_select_account(compose, account, TRUE);
@@ -9612,7 +9612,7 @@ static void compose_insert_file_cb(GtkAction *action, gpointer data)
 
 #ifdef USE_ENCHANT	
 	if (files_inserted > 0 && compose->gtkaspell && 
-        compose->gtkaspell->check_while_typing)
+       	    compose->gtkaspell->check_while_typing)
 		gtkaspell_highlight_all(compose->gtkaspell);
 #endif
 }
@@ -9897,7 +9897,7 @@ static void compose_paste_cb(GtkAction *action, gpointer data)
 #ifdef USE_ENCHANT
 	if (GTK_WIDGET_HAS_FOCUS(compose->text) &&
 	    compose->gtkaspell && 
-        compose->gtkaspell->check_while_typing)
+            compose->gtkaspell->check_while_typing)
 	    	gtkaspell_highlight_all(compose->gtkaspell);
 #endif
 }
@@ -9947,7 +9947,7 @@ static void compose_paste_no_wrap_cb(GtkAction *action, gpointer data)
 #ifdef USE_ENCHANT
 	if (GTK_WIDGET_HAS_FOCUS(compose->text) &&
 	    compose->gtkaspell && 
-        compose->gtkaspell->check_while_typing)
+            compose->gtkaspell->check_while_typing)
 	    	gtkaspell_highlight_all(compose->gtkaspell);
 #endif
 }
@@ -9970,7 +9970,7 @@ static void compose_paste_wrap_cb(GtkAction *action, gpointer data)
 #ifdef USE_ENCHANT
 	if (GTK_WIDGET_HAS_FOCUS(compose->text) &&
 	    compose->gtkaspell &&
-        compose->gtkaspell->check_while_typing)
+            compose->gtkaspell->check_while_typing)
 	    	gtkaspell_highlight_all(compose->gtkaspell);
 #endif
 }
