@@ -1,3 +1,8 @@
+2009-12-10 [iwkse]	3.7.3cvs38
+
+	* src/compose.c
+            Fix some indentation
+
 2009-12-10 [iwkse]	3.7.3cvs37
 
 	* src/compose.c
